--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1021,8 +1021,8 @@ body{
 @media only screen and (min-width: 1200px) {
     .header_text{
         // background-size: contain;
-        margin-bottom: 4%;
-        padding-bottom: 3%;
+        margin-bottom: 7%;
+        // padding-bottom: 3%;
         // background-color: red;
     }
 }
