--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1021,7 +1021,8 @@ body{
 @media only screen and (min-width: 1200px) {
     .header_text{
         // background-size: contain;
-        margin-bottom: 7%;
+        margin-bottom: 6%;
+        padding-top: 12%;
         // padding-bottom: 3%;
         // background-color: red;
     }
