--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,12 +1,12 @@
 $primary-color_1: #334ac0;
-$primary-color: #002ee5;
+$primary-color: #FF5722;
 $primary-background-color: #ffffff;
 $secondary-background-color: rgba(51, 74, 192, 0.03);
 $text-primary-color: #2b2a35;
 $text-secondary-color: #383838;
 $text-tertiary-color: #595959;
 $text-subtext-color: #43434b;
-$card-background-color: #b3efff;
+$card-background-color: #fddd75;
 $color-white: #ffffff;
 $darck-background-color: rgba(192, 152, 51, 0.05);
 
@@ -348,7 +348,7 @@ body{
         text-align: left;
         .card--{
             cursor: pointer;
-            background-color: #69fdef;
+            background-color: #fddd75;
             // background-color: #B3EFFF;
             padding: 54px;
             border-radius: 9px;
@@ -653,7 +653,7 @@ body{
 
 .crayond_ceo{
     // background-color: $darck-background-color;
-    background-color: #69fdef;
+    background-color: $card-background-color;
     padding: 6% 0;
     margin: 6% 0px;
     .about-crayond {
@@ -700,7 +700,7 @@ body{
 }
 
 .next_billion{
-    background-color: $primary-color;
+    background-color: #2d3e50;
     text-align: center;
     position: relative;
     .ovel {
@@ -1018,13 +1018,16 @@ body{
     }
 
  }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1300px) {
     .header_text{
-        // background-size: contain;
-        margin-bottom: 6%;
-        padding-top: 12%;
-        // padding-bottom: 3%;
-        // background-color: red;
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1299px) {
+    .header_text{
+        padding-top: 10%;
+        padding-bottom: 10%;
     }
 }
 // Large devices (laptops/desktops, 992px and up) */
