update opportunity page

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ p{
   }
   @media only screen and (min-width: 1200px) and (max-width: 1798px){
     .stretch{
-    margin-top: 40% !important;
+    margin-top: 99vh !important;
    }
    .title_of_careers {
     /* top: 6.5% !important; */
@@ -180,8 +180,14 @@ p{
   }
   }
   @media only screen and (min-width: 992px) and (max-width: 1199px){
+    .mission_discription{
+      font-size: 20px !important;
+    }
+    .slider_discription{
+      font-size: 16px;
+    }
     .stretch{
-    margin-top: 55% !important;
+    margin-top: 99vh !important;
    }
    .title_of_careers {
     /* top: 7.5% !important; */
@@ -221,7 +227,7 @@ p{
     font-size: 18px;
    }
    .stretch{
-    margin-top: 60% !important;
+    margin-top: 99vh !important;
    }
   }
   @media only screen and (max-width: 426px){
