--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -111,7 +111,9 @@ background-color: red !important;
     top: 0;
     transition: top 0.5s ease-in-out;
     width: 100%;
-
+    .row{
+        display: flex;
+        flex-wrap: wrap;
     a {
         float: left;
         color: $text-subtext-color;
@@ -163,10 +165,11 @@ background-color: red !important;
            width: 148px;
            height: 51px;
            box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
-           font-size: 1rem;
+           font-size: 16px;
            border-color: $primary-color;
            color: $primary-color;
            border-radius: 4px;
+           background-color: $color-white;
            &:hover {
               color: $color-white;
               background-color: $primary-color;
@@ -177,6 +180,7 @@ background-color: red !important;
           }
        }
     } 
+  }
 }
 
 // Mani css
@@ -251,7 +255,7 @@ body{
     cursor: pointer;
     padding: 18px 30px;
     background-color: $primary-color;
-    font-size: 1rem;
+    font-size: 16px;
     color: white;
     border: none;
     font-weight: 700;
@@ -771,6 +775,9 @@ body{
 .footer{
     padding-bottom: 4%;
     padding-top: 4%;
+    .row{
+        display: flex;
+        flex-wrap: wrap;
     .logo_address{
         img{
             margin-bottom: 20px;
@@ -807,11 +814,15 @@ body{
             }
         }
     }
+  }
 }
 
 .footer_social_media {
     border-top: 1px solid rgba(25, 34, 79, 0.08);
     padding: 12px 0px;
+    .row{
+        display: flex;
+        flex-wrap: wrap;
     .footer_list {
         padding: 15px 80px 15px 0px;
         margin: 0;
@@ -856,6 +867,7 @@ body{
             color: $text-subtext-color;
         }
     }
+  }
 }
 
 
@@ -1009,6 +1021,163 @@ body{
     }
 }
 
+.our_team{
+    background-color: #F9F9FD;
+    padding-bottom: 8%;
+    h1{
+        font-weight: 700;
+        font-size: 4.2rem;
+    }
+    .text{
+        text-align: center;
+        padding-top: 6%;
+        font-size: 1.4rem;
+    }
+    .row{
+        background-image: url(../images/path-4.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    .banner--text{
+        font-size: 1.5rem;
+        color: $text-secondary-color;
+    }
+    .card__body_div{
+        .card{
+            height: 112%;
+            border-bottom-right-radius: 28px;
+            border: none;
+            box-shadow: 0 0.3px 1px 0 rgba(51, 74, 192, 0.12), 0 10px 20px 0 rgba(51, 74, 192, 0.12);
+            border: solid 1px rgba(51, 74, 192, 0.12);
+        }
+        .card_primary{
+            background-color: $primary-color;
+            a {
+                color: $color-white;
+                text-decoration: none;
+            }
+        }
+        padding: 14px 12px;
+        margin-top: 66px;
+        .card-title {
+            margin-top: 14%;
+            margin-bottom: 6%;
+        }
+        .card__body{
+            margin: auto;
+            padding: 14px 30px 16px 30px;
+            height: 280px;
+            p{
+                font-size: 21px;
+            }
+            .Oval_code{
+                box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
+                border: solid 1px rgba(51, 74, 192, 0.15);
+            }
+            
+            .Oval_flash{
+                img {
+                    width: 22px;
+                    height: 33px;
+                }
+            }
+            .card-text{
+                color: $text-tertiary-color;
+                font-size: 18px;
+                line-height: 33px;
+                height: 134px;
+            }
+            .fa_icon{
+                box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.07);
+                border: solid 1px rgba(0, 0, 0, 0.09);
+                font-size: 28px;
+                display: flex;
+                background-color: white;
+                border-radius: 60px;
+                position: absolute;
+                top: -30px;
+                left: 40px;
+                height: 81px;
+                text-align: center;
+                width: 81px;
+                vertical-align: middle;
+                img {
+                    margin: auto;
+                    width: 35px;
+                    display: flex;
+                    align-items: center;
+                }
+            }
+        }
+        h5{
+            font-weight: 700;
+        }
+    }
+}
+
+.join_team{
+    background-color: #2d3e50;
+    text-align: center;
+    position: relative;
+    .ovel {
+        position: absolute;
+        right: 15.9%;
+    }
+    .ovel-6 {
+        position: absolute;
+        top: 9.3%;
+        right: 20.9%;
+    }
+    .billion {
+        padding-top: 6%;
+        padding-bottom: 6%;
+        .titel_button {
+            padding-bottom: 30px;
+        .button{
+            padding: 15px 30px;
+            background-color: rgba(0, 0, 0, 0.08);
+            font-size: 16px;
+            color: $color-white;
+            border: none;
+            border-radius: 5px;
+            &:focus{
+                outline:none;
+            }
+        }
+    }
+    h1 {
+        color: $color-white;
+        font-size: 60px;
+    }
+    .button_div{
+        padding-top: 30px;
+        .banner_button{
+            cursor: pointer;
+            padding: 18px 30px;
+            background-color: $color-white;
+            font-size: 16px;
+            color: $primary-color;
+            border: none;
+            font-weight: 700;
+            border-radius: 5px;
+            &:focus{
+                outline:none;
+            }
+        }
+    }
+  }
+  .path-3 {
+      position: absolute;
+      bottom: 15.5%;
+      right: 28.5%;
+  }
+  .path {
+      position: absolute;
+      left: 19.6%;
+      bottom: 0;
+  }
+}
+
 
 // All media qurys
 
@@ -1029,13 +1198,13 @@ body{
     }
 
  }
-@media only screen and (min-width: 1300px) {
-    .header_text{
-        padding-top: 10%;
-        padding-bottom: 10%;
-    }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1299px) {
+// @media only screen and (min-width: 1300px) {
+//     .header_text{
+//         padding-top: 10%;
+//         padding-bottom: 10%;
+//     }
+// }
+@media only screen and (min-width: 1200px) {
     .header_text{
         padding-top: 10%;
         padding-bottom: 10%;
@@ -1062,6 +1231,36 @@ body{
            }
          }
        }
+
+
+    //    opportunities page csss
+       .our_mission_section {
+           .carousel-inner{
+               p{
+                   font-size: 16px;
+               }
+               
+        } 
+    }
+    .epic_works {
+        .epic_title{
+            p{
+                font-size: 20px;
+            }
+        } 
+    }
+    .current_opening{ 
+      .opening_section{ 
+        .positions_card {
+            padding: 0px 15px;
+            button{
+              width: 150px;
+            }
+       }
+    }
+}
+
+
 }
 // Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1251,6 +1450,95 @@ body{
             }
         }
     }
+
+
+    // opportunities page css
+    .our_mission_section{
+        padding: 45px 15px 0px 15px;
+        .our_mission_title{
+            .title_mobile{
+                margin-bottom: 60px !important;
+            }
+            h2{
+                font-size: 32px;
+            }
+            .mission_discription{
+                font-size: 19px;
+            }
+        }
+        .slide{
+            .carousel-inner{
+                .slider_img{
+                    padding-right: 15px;
+                }
+                h5{
+                    margin-bottom: 4px;
+                    margin-top: 4px;
+                }
+                h1{
+                    margin-top: 6px;
+                    font-size: 22px;
+                    margin-bottom: 4px;
+                }
+                p{
+                    font-size: 16px;
+                    margin-top: 7px;
+                    line-height: 1.6;
+                }
+
+            }
+        }
+        .carousel-indicators{
+            li{
+                margin-right: 8px !important;
+          } 
+        }
+    }
+    .epic_works{
+        .container{
+            padding: 60px 15px !important;
+            .epic_title{
+                h2{
+                    font-size: 32px;
+                }
+                p{
+                    font-size: 19px;
+                }
+            }
+        }
+    }
+    .fun_gallery{
+        .ambience_card_mobile{
+            img{
+                padding: 60px 0px 60px 0px !important;
+            }
+        }
+    }
+    .our_team{
+        h1{
+            font-size: 32px;
+        }
+        .card__body_div{
+            height: 320px;
+            .card__body {
+                .card-text{
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+    .current_opening{
+        h1{
+            font-size: 32px;
+        }
+    }
+    .join_team{
+        .billion{
+            h1{
+                font-size: 40px;
+            }
+        } 
+    } 
 }
 // Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -1507,4 +1795,86 @@ body{
           }
       }
   }
+
+
+//   opportunities page css
+.our_mission_section{
+    padding: 46px 15px;
+    .our_mission_title {
+        .title_mobile {
+            margin-bottom: 60px !important;
+            h1{
+                font-size: 32px;
+                line-height: 1.4;
+            }
+        }
+        h2{
+            font-size: 34px;
+        }
+        .mission_discription{
+            font-size: 18px;
+        }
+    }
+    .carousel-inner{ 
+        .slider_img{
+            padding-right: 15px;
+        }
+        h5{
+            margin-top: 45px;
+        }
+        h1{
+            font-size: 24px;
+        }
+        p{
+            font-size: 17px;
+        }
+
+    }
+}
+.epic_works{
+    .container{
+        padding: 65px 15px !important;
+        .epic_title{
+            h2{
+                font-size: 31px;
+            }
+            p{
+                font-size: 18px;
+            }
+        }
+    } 
+}
+.fun_gallery{
+    .ambience_card_mobile{
+        img{
+            padding: 55px 0px 55px 0px !important;
+        }
+    }
+}
+.our_team{
+    padding: 6% 30px;
+    margin-bottom: 40px;
+    h1{
+        font-size: 31px;
+    }
+}
+.current_opening{
+    h1{
+        font-size: 31px;
+    }
+}
+.join_team{
+    .billion{
+        padding-top: 16%;
+        padding-bottom: 16%;
+        h1{
+            font-size: 40px;
+        }
+    }
+    .button_div {
+        .banner_button{
+            width: 250px !important;
+        }
+    }
+}
 }
