--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ p{
     font-size: 18px;
    }
    .stretch{
-    margin-top: 99vh !important;
+    margin-top: 60% !important;
    }
   }
   @media only screen and (max-width: 426px){
