--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,10 @@ p{
   @media only screen and (min-width: 1799px){
     .title_of_careers {
       /* top: 10.5% !important; */
-      bottom: 110px;
+      bottom: 30%;
+    }
+    .our_team{
+      padding-bottom: 4% !important;
     }
     .stretch{
       margin-top: 40% !important;
@@ -234,6 +237,12 @@ p{
     .contact{
       background-size: 9%;
       padding-left: 15%;
+    }
+  }
+
+  @media only screen and (max-width: 390px){
+    .line_path{
+      width: 200px !important;
     }
   }
   @media only screen and (max-width: 767px) {
