--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,15 +174,15 @@ body {
 }
 
 .header .row .header_menu span:hover {
-  border-bottom: 2px solid #FF5722;
+  border-bottom: 2px solid #665CD7;
 }
 
 .header .row .header_menu .active {
-  border-bottom: 2px solid #FF5722;
+  border-bottom: 2px solid #665CD7;
 }
 
 .header .row .header_menu .active a {
-  color: #FF5722;
+  color: #665CD7;
   font-family: "fontLatoBold";
 }
 
@@ -201,15 +201,15 @@ body {
   -webkit-box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
           box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
   font-size: 16px;
-  border-color: #FF5722;
-  color: #FF5722;
+  border-color: #665CD7;
+  color: #665CD7;
   border-radius: 4px;
   background-color: #ffffff;
 }
 
 .header .row .sign_btn button:hover {
   color: #ffffff;
-  background-color: #FF5722;
+  background-color: #665CD7;
 }
 
 .header .row .sign_btn button:focus {
@@ -292,7 +292,7 @@ body {
   width: 300px;
   cursor: pointer;
   padding: 18px 30px;
-  background-color: #FF5722;
+  background-color: #665CD7;
   font-size: 16px;
   color: white;
   border: none;
@@ -322,7 +322,7 @@ body {
 }
 
 .banner_button:hover {
-  background-color: #FF5722;
+  background-color: #665CD7;
 }
 
 .banner_button:hover span {
@@ -419,7 +419,7 @@ body {
 
 .who_you_are .card_div .card-- {
   cursor: pointer;
-  background-color: #fddd75;
+  background-color: #A0FDDC;
   padding: 54px;
   border-radius: 9px;
   height: 366px;
@@ -633,7 +633,7 @@ body {
 }
 
 .our_secrets .card__body_div .card_primary {
-  background-color: #FF5722;
+  background-color: #665CD7;
 }
 
 .our_secrets .card__body_div .card_primary a {
@@ -707,7 +707,7 @@ body {
 }
 
 .crayond_ceo {
-  background-color: #fddd75;
+  background-color: #A0FDDC;
   padding: 6% 0;
   margin: 6% 0px;
 }
@@ -769,7 +769,7 @@ body {
 }
 
 .next_billion {
-  background-color: #2d3e50;
+  background-color: #242438;
   text-align: center;
   position: relative;
 }
@@ -821,7 +821,7 @@ body {
   padding: 18px 30px;
   background-color: #ffffff;
   font-size: 1rem;
-  color: #FF5722;
+  color: #665CD7;
   border: none;
   font-weight: 700;
   border-radius: 5px;
@@ -921,7 +921,7 @@ body {
 }
 
 .footer_social_media .row .footer_list span:hover {
-  color: #FF5722;
+  color: #665CD7;
 }
 
 .footer_social_media .row .social_icon {
@@ -946,7 +946,7 @@ body {
 
 .footer_social_media .row .social_icon i {
   margin: auto;
-  color: #FF5722;
+  color: #665CD7;
 }
 
 .footer_social_media .row .footer_address {
@@ -987,14 +987,14 @@ body {
 }
 
 .our_mission_section .our_mission_title .title_mobile .explore {
-  background-color: #FF5722;
+  background-color: #665CD7;
   color: #ffffff;
   margin-top: 26px;
 }
 
 .our_mission_section .our_mission_title h5 {
   font-size: 16px;
-  color: #FF5722;
+  color: #665CD7;
   font-weight: 500;
 }
 
@@ -1030,7 +1030,7 @@ body {
 
 .our_mission_section .carousel_menu .active {
   color: #ffffff;
-  background-color: #FF5722;
+  background-color: #665CD7;
 }
 
 .our_mission_section .carousel-inner .slider_img {
@@ -1040,9 +1040,9 @@ body {
 .our_mission_section .carousel-inner h5 {
   margin-top: 16px;
   font-size: 16px;
-  color: #FF5722;
+  color: #665CD7;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: -10px;
 }
 
 .our_mission_section .carousel-inner h1 {
@@ -1067,7 +1067,7 @@ body {
 
 .epic_works .epic_title h5 {
   font-size: 16px;
-  color: #FF5722;
+  color: #665CD7;
   font-weight: 500;
 }
 
@@ -1111,7 +1111,7 @@ body {
 }
 
 .current_opening .opening_section .positions_card button {
-  background-color: #FF5722;
+  background-color: #665CD7;
   color: #ffffff;
   font-family: fontLatoBlack;
 }
@@ -1158,7 +1158,7 @@ body {
 }
 
 .our_team .card__body_div .card_primary {
-  background-color: #FF5722;
+  background-color: #665CD7;
 }
 
 .our_team .card__body_div .card_primary a {
@@ -1277,6 +1277,11 @@ body {
   font-size: 60px;
 }
 
+.join_team .billion p {
+  color: #ffffff;
+  font-size: 22px;
+}
+
 .join_team .billion .button_div {
   padding-top: 30px;
 }
@@ -1286,7 +1291,7 @@ body {
   padding: 18px 30px;
   background-color: #ffffff;
   font-size: 16px;
-  color: #FF5722;
+  color: #665CD7;
   border: none;
   font-weight: 700;
   border-radius: 5px;
@@ -1545,8 +1550,11 @@ body {
   .epic_works .container .epic_title p {
     font-size: 19px;
   }
+  .fun_gallery .ambience_card_mobile {
+    padding: 60px 15px 60px 15px !important;
+  }
   .fun_gallery .ambience_card_mobile img {
-    padding: 60px 0px 60px 0px !important;
+    padding: 20px 0px 20px 0px !important;
   }
   .our_team h1 {
     font-size: 32px;
@@ -1562,6 +1570,9 @@ body {
   }
   .join_team .billion h1 {
     font-size: 40px;
+  }
+  .join_team .billion p {
+    font-size: 19px;
   }
 }
 
@@ -1812,8 +1823,11 @@ body {
   .epic_works .container .epic_title p {
     font-size: 18px;
   }
+  .fun_gallery .ambience_card_mobile {
+    padding: 55px 15px 55px 15px !important;
+  }
   .fun_gallery .ambience_card_mobile img {
-    padding: 55px 0px 55px 0px !important;
+    padding: 20px 0px 20px 0px !important;
   }
   .our_team {
     padding: 6% 30px;
@@ -1845,6 +1859,9 @@ body {
   }
   .join_team .billion h1 {
     font-size: 40px;
+  }
+  .join_team .billion p {
+    font-size: 18px;
   }
   .join_team .button_div .banner_button {
     width: 250px !important;
