--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,12 +1,13 @@
 $primary-color_1: #334ac0;
-$primary-color: #FF5722;
+$primary-color: #665CD7;
 $primary-background-color: #ffffff;
 $secondary-background-color: rgba(51, 74, 192, 0.03);
+$tertiary-background-color: #242438;
 $text-primary-color: #2b2a35;
 $text-secondary-color: #383838;
 $text-tertiary-color: #595959;
 $text-subtext-color: #43434b;
-$card-background-color: #fddd75;
+$card-background-color: #A0FDDC;
 $color-white: #ffffff;
 $darck-background-color: rgba(192, 152, 51, 0.05);
 
@@ -356,7 +357,7 @@ body{
         text-align: left;
         .card--{
             cursor: pointer;
-            background-color: #fddd75;
+            background-color: $card-background-color;
             // background-color: #B3EFFF;
             padding: 54px;
             border-radius: 9px;
@@ -710,7 +711,7 @@ body{
 }
 
 .next_billion{
-    background-color: #2d3e50;
+    background-color: $tertiary-background-color;
     text-align: center;
     position: relative;
     .ovel {
@@ -939,7 +940,7 @@ body{
             font-size: 16px;
             color: $primary-color;
             font-weight: 500;
-            margin-bottom: 15px;
+            margin-bottom: -10px;
 
         }
         h1{
@@ -1148,6 +1149,10 @@ body{
     h1 {
         color: $color-white;
         font-size: 60px;
+    }
+    p{
+        color: $color-white;
+        font-size: 22px;
     }
     .button_div{
         padding-top: 30px;
@@ -1512,8 +1517,9 @@ body{
     }
     .fun_gallery{
         .ambience_card_mobile{
+            padding: 60px 15px 60px 15px !important;
             img{
-                padding: 60px 0px 60px 0px !important;
+                padding: 20px 0px 20px 0px !important;
             }
         }
     }
@@ -1539,6 +1545,9 @@ body{
         .billion{
             h1{
                 font-size: 40px;
+            }
+            p{
+                font-size: 19px;
             }
         } 
     } 
@@ -1849,8 +1858,9 @@ body{
 }
 .fun_gallery{
     .ambience_card_mobile{
+        padding: 55px 15px 55px 15px !important;
         img{
-            padding: 55px 0px 55px 0px !important;
+            padding: 20px 0px 20px 0px !important;
         }
     }
 }
@@ -1892,6 +1902,9 @@ body{
         padding-bottom: 16%;
         h1{
             font-size: 40px;
+        }
+        p{
+            font-size: 18px;
         }
     }
     .button_div {
